objects/Contract_Tier_Set_Month__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contract_Tier_Set__r.Contract__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Tier_Set_Period__c</fullName>
        <label>Contract Tier Set Period</label>
        <referenceTo>Contract_Tier_Set_Period__c</referenceTo>
        <relationshipLabel>Contract Tier Set Month</relationshipLabel>
        <relationshipName>Contract_Tier_Set_Month</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Tier_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipLabel>Contract Tier Set Month</relationshipLabel>
        <relationshipName>Contract_Tier_Set_Month</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <description>The end user name, from the contract&apos;s account.</description>
        <formula>Contract_Tier_Set__r.Contract__r.Account_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The end user name.</inlineHelpText>
        <label>End User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_Hash__c</fullName>
        <formula>CASESAFEID(Contract_Tier_Set__c) &amp; &apos;#&apos; &amp; Source_Name__c &amp; &apos;#&apos; &amp; Platform_Id__c &amp; &apos;#&apos; &amp; Month__c &amp; &apos;#&apos; &amp; Year__c</formula>
        <label>Identifier Hash</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Usage_AP__c</fullName>
        <label>Max Usage AP</label>
        <summarizedField>Service_Usage__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Region_Code__c</field>
            <operation>equals</operation>
            <value>AP</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Usage_Concurrent__c</fullName>
        <label>Max Usage Concurrent</label>
        <summarizedField>Service_Usage__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Usage_Type__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Usage_EU__c</fullName>
        <label>Max Usage EU</label>
        <summarizedField>Service_Usage__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Region_Code__c</field>
            <operation>equals</operation>
            <value>EU</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Usage_US__c</fullName>
        <label>Max Usage US</label>
        <summarizedField>Service_Usage__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Region_Code__c</field>
            <operation>equals</operation>
            <value>US</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Usage__c</fullName>
        <label>Max Usage</label>
        <summarizedField>Service_Usage__c.Quantity__c</summarizedField>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Month_Year_Date__c</fullName>
        <formula>DATE(VALUE(Year__c),VALUE(Month__c),  DAY(Contract_Tier_Set__r.Contract__r.Pricing_Start_Date__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Year Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Id__c</fullName>
        <description>The Platform Id for which this Month activity represents</description>
        <inlineHelpText>The Platform Id for which this Month activity represents</inlineHelpText>
        <label>Platform Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <description>The sold to name, from the related contract.</description>
        <formula>Contract_Tier_Set__r.Contract__r.Sold_To_Name_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sold to name.</inlineHelpText>
        <label>Sold To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <description>The Source Name of the Platform Id</description>
        <inlineHelpText>The Source Name of the Platform Id</inlineHelpText>
        <label>Source Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sum_Count__c</fullName>
        <description>Sum of the Service Usage Count field. For reporting the number of calls producing a total number of minutes for example. Provided for all Service Usage Records of Service Types
0,&apos;PCL General Charge&apos;,
1,&apos;Outbound Calling&apos;,
2,&apos;Inbound Calling&apos;,
3,&apos;Outbound Direct Connect&apos;,
4,&apos;Inbound Direct Connect&apos;,
5,&apos;Bad Numbers&apos;,
6,&apos;Answering Machine Hangups&apos;,
13,&apos;Dialer&apos;,
15,&apos;Attempt Not Connected&apos;
20,&apos;Agent Time&apos;</description>
        <inlineHelpText>Sum of the Service Usage Count field. For reporting the number of calls producing a total number of minutes for example.</inlineHelpText>
        <label>Sum Count</label>
        <summarizedField>Service_Usage__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Service_Type__c</field>
            <operation>equals</operation>
            <value>0,1,2,3,4,5,6,13,15,20</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_Usage__c</fullName>
        <label>Sum Usage</label>
        <summarizedField>Service_Usage__c.Quantity__c</summarizedField>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Inbound_Calls_Cost__c</fullName>
        <description>For any calls rated off of the Inbound Calling Rate Table these records will populate the actual cost. Use this in MBO creation to pull the price from here, not the Tier Set</description>
        <inlineHelpText>For any calls rated off of the Inbound Calling Rate Table these records will populate the actual cost. Use this in MBO creation to pull the price from here, not the Tier Set</inlineHelpText>
        <label>Total Inbound Calls Cost</label>
        <summarizedField>Service_Usage__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Service_Type__c</field>
            <operation>equals</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Other_Cost__c</fullName>
        <description>Owner Cloud Billing
Total for all activity not specifically assigned to Outbound or Inbound of 1,2</description>
        <inlineHelpText>Total for all activity not specifically assigned to Outbound or Inbound totals</inlineHelpText>
        <label>Total Other Cost</label>
        <summarizedField>Service_Usage__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Service_Type__c</field>
            <operation>notEqual</operation>
            <value>1,2</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outbound_Calls_Cost__c</fullName>
        <description>For any calls rated off of the Outbound Calling Rate Table these records will populate the actual cost. Use this in MBO creation to pull the price from here, not the Tier Set.</description>
        <inlineHelpText>For any calls rated off of the Outbound Calling Rate Table these records will populate the actual cost. Use this in MBO creation to pull the price from here, not the Tier Set.</inlineHelpText>
        <label>Total Outbound Calls Cost</label>
        <summarizedField>Service_Usage__c.Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Service_Usage__c.Service_Type__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Usage__c.Contract_Tier_Set_Month__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Usage__c</fullName>
        <formula>CASE(TEXT(Contract_Tier_Set__r.Aggregation_Model__c),
&apos;Max Per Month&apos;,Max_Usage__c,
&apos;Sum of Max Per Region Per Month&apos;,(IF(ISBLANK(Max_Usage_AP__c),0,Max_Usage_AP__c) + 
IF(ISBLANK(Max_Usage_US__c), 0, Max_Usage_US__c) + 
IF(ISBLANK(Max_Usage_EU__c), 0, Max_Usage_EU__c)),
Sum_Usage__c)</formula>
        <label>Total Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Contract Tier Set Month</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cloud_Contact_Center_Inbound_Voice_Seat</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Tier_Set__c</field>
            <operation>equals</operation>
            <value>Cloud Contact Center Inbound Voice Seat</value>
        </filters>
        <label>Cloud Contact Center Inbound Voice Seat</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contracts_017503</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Name__c</field>
            <operation>equals</operation>
            <value>Contracts - 017503</value>
        </filters>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Contracts - 017503</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contracts_017635</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Name__c</field>
            <operation>equals</operation>
            <value>Contracts - 017635</value>
        </filters>
        <label>Contracts - 017635 Multi Month Bug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Erik_and_Sourav</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Tier_Set__c</field>
            <operation>contains</operation>
            <value>Erik</value>
        </filters>
        <label>Erik and Sourav</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Identifier_Hash</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Identifier_Hash__c</field>
            <operation>contains</operation>
            <value>a9tU0000000KypuIAC</value>
        </filters>
        <label>Identifier Hash</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Outbound_Rate_Table</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Outbound_Calls_Cost__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>Outbound Rate Table</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>a9tU0000000KyqEIAS</fullName>
        <columns>NAME</columns>
        <columns>Contract_Tier_Set__c</columns>
        <columns>Identifier_Hash__c</columns>
        <columns>Max_Usage__c</columns>
        <columns>Sum_Usage__c</columns>
        <columns>Total_Outbound_Calls_Cost__c</columns>
        <columns>Total_Usage__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Month__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Identifier_Hash__c</field>
            <operation>contains</operation>
            <value>a9tU0000000KyqEIAS</value>
        </filters>
        <label>a9tU0000000KyqEIAS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CTM-{000000}</displayFormat>
        <label>Contract Tier Set Month Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Tier Set Month</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>